--- a/portfolio/work10/index.html
+++ b/portfolio/work10/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>VOLUMEN DE LUZ_1</title>
+<title>INVESTIGACIÓN DELIVERY</title>
 <meta name="description" content="Portafolio Taller Integrado 2020">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -104,14 +104,59 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>VOLUMEN DE LUZ_1</h1>
-         <p>Volumen de luz realizado a través de un un objeto fabricado de papel mantequilla y una luz.</p>
-<p><img src="/img/VOLUMENDELUZ1.1.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.2.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.3.jpg" alt="plano1"></p>
+         <h1>INVESTIGACIÓN DELIVERY</h1>
+         <p>Tema: Delivery del futuro.</p>
 <blockquote>
-<p>Observaciones: El volumen de luz logrado, genera sombras similares a &ldquo;puas&rdquo; que nace desde el mismo objeto y se extiende hacia un lado de la base.</p>
+<ul>
+<li>El delivery en tiempos de pandemia se ve altamente afectado, ya que al estar las personas en sus casas en cuarentenas, el salir a comprar se hace menos frecuente o imposible. El cierre de los centros comerciales genera una mayor venta online. Las entregas de los productos comprados online deben adaptarse a la contingencia. En este sentido consideramos algunos puntos y preguntas importantes sobre esta adaptación del delivery.</li>
+</ul>
 </blockquote>
+<p><img src="/img/POST9.1.png" alt="plano1"></p>
+<h5 id="desinfección">DESINFECCIÓN</h5>
+<p>Hoy hay distintas formas de desinfección frente a la pandemia. En esta parte consideramos importante investigar métodos que sean lo menos invasivas para el producto, por eso dejamos fuera las soluciones líquidas como el cloro o el alcohol.</p>
+<p>*Diferencias entre sanitizar, desinfectar y esterilizar.
+La sanitización es un método que sirve para reducir los microorganismos pero no los elimina por completo, antes de este proceso es necesario limpiar el exceso de suciedad. La desinfección elimina los microorganismos casi por completos. Esterilizar es un proceso que va después de la desinfección, ahí se elimina todo.
+El covid-19, sólo requiere desinfección.</p>
+<blockquote>
+<ul>
+<li>Tecnología luz UV: Se ha logrado la eliminación del 99,9% del COVID-19 en 30 segundos. Esta tecnología puede permitir el desarrollo y producción de soluciones de desinfectadoras del covid 19 en el aire, así como en las superficies de productos como las mascarillas.</li>
+</ul>
+</blockquote>
+<blockquote>
+<ul>
+<li>Ozono: Se demora 15 minutos en desinfectar y eliminar el COVID-19 de autos, motos y camiones. Es eficaz y económico, además de ser amigable con el medio ambiente. El ozono es necesario producirlo de forma artificial directamente en el momento y lugar que se va a utilizar. El ozonizador es una máquina que genera ozono artificial para desinfectar, limpiar ambientes, eliminar olores y para la depuración de aguas.</li>
+</ul>
+</blockquote>
+<h5 id="packaging">PACKAGING</h5>
+<p>Tiempo duración del virus en distintos materiales utilizados en los empaques. (aproximada)</p>
+<blockquote>
+<ul>
+<li>Plástico: 5 días</li>
+<li>Papel: 4 a 5 días</li>
+<li>Cartón: 24 horas</li>
+</ul>
+</blockquote>
+<h5 id="linea-de-tiempo--actores">LINEA DE TIEMPO / ACTORES</h5>
+<h6 id="-canales-de-distribución">-Canales de distribución</h6>
+<p>Se refieren a los canales que se usan para llevar el producto desde el fabricante o creador hasta el consumidor final.</p>
+<blockquote>
+<ul>
+<li>Canal directo -&gt; vende sin necesidad de intermediarios.</li>
+<li>Canal indirecto -&gt; pasa por varias manos antes.</li>
+</ul>
+</blockquote>
+<h6 id="linea-de-tiempo">LINEA DE TIEMPO</h6>
+<p><img src="/img/LINEADETIEMPO.png" alt="plano1"></p>
+<h6 id="que-seria-lo-mejor">¿QUE SERIA LO MEJOR?</h6>
+<blockquote>
+<ul>
+<li>Evitar transportes particulares, ya que no se sabe bien por donde anduvo anteriormente.</li>
+<li>Evitar contactos con las personas al momento de hacer entregas.</li>
+<li>Entregas de un solo viaje y cliente.</li>
+<li>Las aplicaciones tienen menor riesgo, pero no son eficientes para el vendedor, lo mejor seria tener una central para despachar productos,</li>
+</ul>
+</blockquote>
+
          
       </div>
     </div>
