--- a/portfolio/work9/index.html
+++ b/portfolio/work9/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>VOLUMEN DE LUZ_1</title>
+<title>FUSION 360</title>
 <meta name="description" content="Portafolio Taller Integrado 2020">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -104,14 +104,77 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>VOLUMEN DE LUZ_1</h1>
-         <p>Volumen de luz realizado a través de un un objeto fabricado de papel mantequilla y una luz.</p>
-<p><img src="/img/VOLUMENDELUZ1.1.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.2.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.3.jpg" alt="plano1"></p>
+         <h1>FUSION 360</h1>
+         <p>EJERCICIO 1</p>
 <blockquote>
-<p>Observaciones: El volumen de luz logrado, genera sombras similares a &ldquo;puas&rdquo; que nace desde el mismo objeto y se extiende hacia un lado de la base.</p>
+<ul>
+<li>Primero importar el archivo del ejercicio 1.</li>
+</ul>
 </blockquote>
+<p><img src="/img/FUSION.1.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Luego revisar la capa Analysis. INSPECT - SECTION ANALYSIS</li>
+<li>Con ANALYSIS se puede generar un corte en base a un plano en el modelo principal.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.2.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Vamos al plano 1 dentro de la capa de Analysis, encender la capa de Sketches y apagar la capa Construction. Luego comenzamos a acercar los puntos a la geometría de la manera más precisa. (se debe dejar una pequeña tolerancia)</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.3.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Vamos a realizar el mismo procedimiento con los demás planos de la capa Analysis.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.4.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Luego apago la capa de Construction (donde se encuentran los planos) y la capa Analysis. Dejando solo encendida la capa de Sketches.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.5.png" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Me dirigo al menu CREATE FORM, luego apreto CREATE LOFT.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.6.png" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Luego seleccionamos los 3 Profile de nuestro modelo. A modo de crear una geometria mas fácil de editar disminuimos el numero de caras dentro del cuadro de loft.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.7.png" alt="plano1">
+<img src="/img/FUSION.8.png" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Le damos ok en la ventana de Loft.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.9.png" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Seleccionamos la herramienta Modify. Hago doble click en el vertice que quiero modificar para seleccionarlo. Luego apreto Edit Form, y comenzamos a editar con la herramienta para que quede lo mas preciso posible.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.10.png" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Luego apreto Edit Form, y comenzamos a editar con la herramienta para que quede lo mas preciso posible.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.11.png" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Después seleccionamos el aro que esta más cerca de la mano, apretamos Modify y con la tecla alt presionada desplazamos hacia los nudillos. Luego lo editamos para que quede preciso.</li>
+</ul>
+</blockquote>
+<p><img src="/img/FUSION.12.png" alt="plano1"></p>
+
          
       </div>
     </div>
