--- a/portfolio/work11/index.html
+++ b/portfolio/work11/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>VOLUMEN DE LUZ_1</title>
+<title>EL FUTURO DEL DELIVERY / PROTOTIPO</title>
 <meta name="description" content="Portafolio Taller Integrado 2020">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -104,14 +104,16 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>VOLUMEN DE LUZ_1</h1>
-         <p>Volumen de luz realizado a través de un un objeto fabricado de papel mantequilla y una luz.</p>
-<p><img src="/img/VOLUMENDELUZ1.1.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.2.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.3.jpg" alt="plano1"></p>
+         <h1>EL FUTURO DEL DELIVERY / PROTOTIPO</h1>
+         <p>Tema: Delivery del futuro.</p>
+<h5 id="sistema">SISTEMA</h5>
 <blockquote>
-<p>Observaciones: El volumen de luz logrado, genera sombras similares a &ldquo;puas&rdquo; que nace desde el mismo objeto y se extiende hacia un lado de la base.</p>
+<ul>
+<li></li>
+</ul>
 </blockquote>
+<p><img src="/img/DIBUJOPROTOTIPO.png" alt="plano1"></p>
+
          
       </div>
     </div>
