--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>VOLUMEN DE LUZ_1</title>
+<title>MOVILIDAD FUTURO</title>
 <meta name="description" content="Portafolio Taller Integrado 2020">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -104,14 +104,48 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>VOLUMEN DE LUZ_1</h1>
-         <p>Volumen de luz realizado a través de un un objeto fabricado de papel mantequilla y una luz.</p>
-<p><img src="/img/VOLUMENDELUZ1.1.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.2.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.3.jpg" alt="plano1"></p>
+         <h1>MOVILIDAD FUTURO</h1>
+         <p>En base a referentes, se comienza a plantear un tema específico para desarrollar como proyecto pensando la movilidad del futuro en base a las alteraciones que ha generado el COVID19 a nuestro modo de vida contemporánea.</p>
+<p>Tema: Delivery en tiempo de pandemia.</p>
 <blockquote>
-<p>Observaciones: El volumen de luz logrado, genera sombras similares a &ldquo;puas&rdquo; que nace desde el mismo objeto y se extiende hacia un lado de la base.</p>
+<ul>
+<li>El delivery en tiempo de pandemia debe tomar varias restricciones, o más bien varios puntos deben readecuarse para ser ejecutado de forma responsable y efectiva. Teniendo en cuenta que los dos principales servicios de delivery son el de productos y comida. Estos tienen varios puntos importantes que deben cambiar frente a la contingencia.</li>
+</ul>
 </blockquote>
+<p><img src="/img/MOVILIDAD.png" alt="plano1"></p>
+<p>Referentes.</p>
+<p><a href="https://www.youtube.com/watch?v=EZ4uczr19io">DRONE DELIVERY (video)</a> - Dragonfly Drone Delivery.
+<img src="/img/DRONEDELIVERY.png" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>En este video se muestra un prototipo de delivery a través de drone. La base donde se encuentran los productos que deben ser entregados, se encuentran en un tipo de plataforma en el mar.</li>
+<li>Podría ser muy útil actualmente para las entregas, tanto de medicinas como productos comprados por internet, donde se evita la circulación de personas, a parte de ser mas rápido y efectivo y menos contaminante.</li>
+</ul>
+</blockquote>
+<p><a href="https://vimeo.com/320057631">ROBOT DELIVERY (video)</a> - Roxo Robot.
+<img src="/img/FEDEX.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>La principal función del robot Roxo de Fedex es entregar el paquete el mismo día de la compra. Este tiene un sitema de 6 patas, dos pequeñas y 4 grandes co tracción; así consigue desplazarse por diversas superficies, tomar curvas, entre otros. y además cuenta con paneles de visualización delanteros y traseros.</li>
+<li>Actualemnte con el brote de COVID-19, este sistema sería de gran ayuda para que las personas puedan adquerir productos variados sin la necesidad de un mensajero humano; esto evitaría la exposición de personas durante cuarentena y evitaría la propagación del virus.</li>
+</ul>
+</blockquote>
+<p><a href="https://www.youtube.com/watch?v=ksyiIqf3HMU">NURO DELIVERY (video)</a> - Nuro Vehículo Inteligente.
+<img src="/img/NURO.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>La conectividad hoy en día, con la pandemia que sufrimos a nivel global, se ve totalmente afectada por los riesgos que conlleva salir de la casa, o incluso recibir un delivery a cargo de un ser humano. Nuro propone acabar con esto, con un vehículo inteligente que va, desde el supermercado, directo a tu casa.</li>
+</ul>
+</blockquote>
+<p>Observaciones.</p>
+<blockquote>
+<ul>
+<li>Todos son vehículos roboticos programados para llevar las cosas al destino, de esta forma permiten que durante la entrega no exista contacto de dos personas.</li>
+</ul>
+</blockquote>
+<p>Planteamiento de preguntas.</p>
+<p><img src="/img/MOVILIDAD2.png" alt="plano1"></p>
+
          
       </div>
     </div>
