--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>VOLUMEN DE LUZ_1</title>
+<title>DEMO SOFTWARE</title>
 <meta name="description" content="Portafolio Taller Integrado 2020">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -104,14 +104,22 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>VOLUMEN DE LUZ_1</h1>
-         <p>Volumen de luz realizado a través de un un objeto fabricado de papel mantequilla y una luz.</p>
-<p><img src="/img/VOLUMENDELUZ1.1.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.2.jpg" alt="plano1"></p>
-<p><img src="/img/VOLUMENDELUZ1.3.jpg" alt="plano1"></p>
+         <h1>DEMO SOFTWARE</h1>
+         <p>Software elegido: NEORT</p>
+<ul>
+<li><a href="https://neort.io/popular">NEORT</a> - Plataforma digital para crear arte digital a traves de coding.
+<img src="/img/NEORT.png" alt="plano1"></li>
+</ul>
 <blockquote>
-<p>Observaciones: El volumen de luz logrado, genera sombras similares a &ldquo;puas&rdquo; que nace desde el mismo objeto y se extiende hacia un lado de la base.</p>
+<p>*<a href="https://neort.io/product/latest">Ejemplo de uso 1</a> - Compartir y gestionar obras de arte en distintos formatos (video, GLSL y Javascript).</p>
 </blockquote>
+<blockquote>
+<p>*<a href="https://neort.io/product/latest">Ejemplo de uso 2</a> - Vender o comprar conocimiento y habilidades disponibles en la página.*</p>
+</blockquote>
+<p>-Mostrar a través de imágenes el proceso desde que entras a la página a el inicio de seción.</p>
+<p>-Explicar para que sirve cada una de las opciones. Luego realizar un &ldquo;minitutorial&rdquo; de casa opción paso a paso a través de imagenes. Escribir el codigo utilizado en cada opción.</p>
+<p><img src="/img/NEORT.1.jpg" alt="plano1"></p>
+
          
       </div>
     </div>
