--- a/portfolio/work10/index.html
+++ b/portfolio/work10/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -154,6 +154,25 @@ El covid-19, sólo requiere desinfección.</p>
 <li>Evitar contactos con las personas al momento de hacer entregas.</li>
 <li>Entregas de un solo viaje y cliente.</li>
 <li>Las aplicaciones tienen menor riesgo, pero no son eficientes para el vendedor, lo mejor seria tener una central para despachar productos,</li>
+</ul>
+</blockquote>
+<h6 id="referentes">REFERENTES</h6>
+<p><img src="/img/referente_roxo.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>El robot Roxo de Fedex contiene inteligencia articial y distintos sensores para navergar sin problemas al lgar de entrega, como por ejemplo esquivar personas o tener distintas rutas. Además de una cámara y un compartimiento para llevar más de un paquete en su interor.</li>
+</ul>
+</blockquote>
+<p><img src="/img/referente_starship.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Este robot de Starship son muy seguros y pueden navegar alrededor de objetos y personas, es latamente eficiente y es alimentado alectricamente. Además su sistema de ruedas permite que se adapte a distintas superficies y caminos.</li>
+</ul>
+</blockquote>
+<p><img src="/img/referente_amazon.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Este dron de Prime Air se inspira en diseños de aviones y helicópteros, puede despegar y aterrizas de forma vertical, pero también puede volar de manera aerodinámica como un avión. Por otra parte, sus hélices has sido optimizadas para reducir el sonido de alta frecuencia.</li>
 </ul>
 </blockquote>
 
