--- a/portfolio/work11/index.html
+++ b/portfolio/work11/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -106,13 +106,39 @@
       <div class="content-column-content">
          <h1>EL FUTURO DEL DELIVERY / PROTOTIPO</h1>
          <p>Tema: Delivery del futuro.</p>
+<h5 id="problema">PROBLEMA</h5>
+<p><img src="/img/CONTAMINACION.png" alt="plano1"></p>
+<h5 id="prototipo">PROTOTIPO</h5>
+<p><img src="/img/COLLAGE.jpg" alt="plano1">
+*Collage referentes</p>
+<ol>
+<li>Prototipo de robot de reparto. Ruedas de robot Starship que se acomodan al lugar por donde transita, las cuales le permiten por ejemplo subir veredas y lograr pasar por distintos tipos de terrenos con los que se puede encontrar en la calle. Parte superior robot FedEx, el cual cuenta con unas puertas que se abren solo cuando llegan al destinto y la persona que lo recibe activa abrirlo desde la app. Esto la hace segura frente a intento de robo. Además cuenta con una camara 360 en la parte superior, la cual le entrega distintas ordenes y habilidades sensoriales en el momento de cruzar con la calle o encomntrarse con personas.</li>
+<li>Drone para recorger y entregar encomiendas. Parte superior (helices) modelo de UPS Flight Forward Inc, el cual permite elevar paquetes de hasta 10 kga una altitud de 20 pies. La parte de abajo es de Amazon Prime Air, el cual tiene unas patas de aterrizaje firmes y una fuerte garra que se ajusta al tamaño del paquete.</li>
+<li>Este prototipo es un robot con una helice agregada, lo que permite que este robot en ciertas ocasiones tambien se pueda elevar.</li>
+</ol>
+<p><img src="/img/DIBUJOS.png" alt="plano1"></p>
+<h6 id="modelo-drone">MODELO DRONE</h6>
+<div>
+    <iframe src="https://gmail774783.autodesk360.com/shares/public/SH56a43QTfd62c1cd968a72bcb2d49791727?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+</div>
+<p><img src="/img/COMPONENTESDRONE.jpg" alt="plano1"></p>
+<h6 id="modelo-robot">MODELO ROBOT</h6>
+<div>
+    <iframe src="https://alumnos1688.autodesk360.com/shares/public/SH56a43QTfd62c1cd968627c26348cd06c81?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+</div>
+<p><img src="/img/COMPONENTESROBOT.jpg" alt="plano1"></p>
 <h5 id="sistema">SISTEMA</h5>
-<blockquote>
-<ul>
-<li></li>
-</ul>
-</blockquote>
-<p><img src="/img/DIBUJOPROTOTIPO.png" alt="plano1"></p>
+<p><img src="/img/SISTEMA.png" alt="plano1"></p>
+<ol>
+<li>El drone va a buscar los articulos a la tienda. En este punto el drone deja caer una bandeja donde el vendedor de la tienda deja los productos. Luego el drone se lleva los productos en la bandeja hasta la central.</li>
+<li>El drone deja los articulos en la linea de procesos que esta en la central.</li>
+<li>Los articulos pasan por radiación UV para eliminar los virus y bacterias.</li>
+<li>Los articulos de la bandeja son pasados a un packaging especial para la entrega de robot o drone.</li>
+<li>Un brazo robótico almacena y ordena los paquetes segun fecha de entrega y tipo de delivery.</li>
+<li>El brazo robótico deja los paquetes a entregar en la linea donde un drone o un robot los atrapan.</li>
+<li>a. El drone lleva el paquete en el aire hasta el lugar de entrega, luego aterriza en la vereda o jardin dejando el paquete suavemente. El dron baja cuando recibe la orden a traves de la app del cliente.</li>
+<li>b. El robot lleva el paquete hasta el lugar de entrega, luego abre su caja de almacenamiento cuando recibe la orden a traves de la app del cliente, el cual puede retirar su entrega.</li>
+</ol>
 
          
       </div>
