--- a/portfolio/work2/index.html
+++ b/portfolio/work2/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -112,15 +112,15 @@
 <blockquote>
 <p>Observaciones: El objeto proyecta en la pantalla distintas sombras, observando de una forma amplia se pueden apreciar formas parecidas a montañas que se van entrecruzando, luego más en profundidad se puede ver que las sombras van formando un patrón compuesto por formas similares a rombos. Como se van entrelazando las líneas y van creando cuadrículas más claras. Mientras más cercanas están las líneas más oscuro se vuelve (se sobreponen líneas).</p>
 </blockquote>
-<h2 id="detrás-del-plano">DETRÁS DEL PLANO</h2>
+<h4 id="dibujos">DIBUJOS</h4>
+<p>Dibujos detalles</p>
+<p><img src="/img/DPLANODELUZ1.jpg" alt="plano1"></p>
+<h4 id="detrás-del-plano">DETRÁS DEL PLANO</h4>
 <p>Tanto la pantalla como el objeto de papel y la luz se encontraban a una distancia proporcional. La luz se encuentra a nivel de la base.</p>
+<p><img src="/img/ESQUEMAP1.jpg" alt="plano1"></p>
 <p><img src="/img/PLANODELUZ1.6.png" alt="plano1"></p>
 <p><img src="/img/PLANODELUZ1.7.png" alt="plano1"></p>
 <p><img src="/img/PLANODELUZ1.8.png" alt="plano1"></p>
-<h2 id="dibujos">DIBUJOS</h2>
-<p>Dibujo detalle 01
-<img src="/img/PLANODELUZ1.DIBUJO.jpg" alt="plano1"></p>
-<p><img src="/img/PLANODELUZ1.DIBUJO2.jpg" alt="plano1"></p>
          
       </div>
     </div>
