--- a/portfolio/work3/index.html
+++ b/portfolio/work3/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -112,12 +112,12 @@
 <blockquote>
 <p>Observaciones: El objeto proyecta en la pantalla distintas sombras, observando de una forma amplia se pueden apreciar formas parecidas a montañas que van seguidas aumentando su tamaño de izquierda a derecha, también se puede observar que las sombras a medida que van creciendo se van poniendo más claras, formando una paleta de grises muy variada.</p>
 </blockquote>
-<h2 id="detrás-del-plano">DETRÁS DEL PLANO</h2>
+<h4 id="detrás-del-plano">DETRÁS DEL PLANO</h4>
 <p>Para formar este plano, la luz se encontraba más alejada del objeto y pantalla, a nivel de la base. El objeto se encuentra plegado para lograr la forma.</p>
 <p><img src="/img/PLANODELUZ2.6.jpg" alt="plano1"></p>
 <p><img src="/img/PLANODELUZ2.7.jpg" alt="plano1"></p>
 <p><img src="/img/PLANODELUZ2.8.jpg" alt="plano1"></p>
-<h2 id="dibujos">DIBUJOS</h2>
+<h4 id="dibujos">DIBUJOS</h4>
 <p><img src="/img/PLANODELUZ2.DIBUJO.jpg" alt="plano1"></p>
          
       </div>
