--- a/portfolio/work4/index.html
+++ b/portfolio/work4/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -112,11 +112,12 @@
 <blockquote>
 <p>Observaciones: Esta vez el plano genera líneas más finas que las anteriores que se entrecruzan hacia la izquierda, dejando la parte del centro más despejada que la de los lados. En la &ldquo;cima&rdquo; de la parte central se puede ver claramente el patrón de rombos muy definidos, y hacia la izquierda se van volviendo a una forma rectangular. Las partes superiores de las sombras son mas oscuras, y las de abajo son mas claras y no tan definidas.</p>
 </blockquote>
-<h2 id="detrás-del-plano">DETRÁS DEL PLANO</h2>
+<h4 id="detrás-del-plano">DETRÁS DEL PLANO</h4>
 <p>Tanto la luz, como el objeto y la pantalla se encuentran a una distancia proporcional. La luz entra &ldquo;medio a medio&rdquo; a través del objeto, a nivel de la base.</p>
 <p><img src="/img/PLANODELUZ3.6.JPG" alt="plano1"></p>
 <p><img src="/img/PLANODELUZ3.7.JPG" alt="plano1"></p>
 <p><img src="/img/PLANODELUZ3.8.JPG" alt="plano1"></p>
+<h4 id="dibujos">DIBUJOS</h4>
          
       </div>
     </div>
