--- a/portfolio/work5/index.html
+++ b/portfolio/work5/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>VOLUMEN DE LUZ_1</title>
+<title>VOLUMEN DE LUZ</title>
 <meta name="description" content="Portafolio Taller Integrado 2020">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -104,9 +104,10 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>VOLUMEN DE LUZ_1</h1>
+         <h1>VOLUMEN DE LUZ</h1>
          <p>Volumen de luz realizado a través de un un objeto fabricado de papel mantequilla y una luz.</p>
 <p><img src="/img/VOLUMENDELUZ1.1.jpg" alt="plano1"></p>
+<p><img src="/img/FOTOSVOLUMEN.jpg" alt="plano1"></p>
 <p><img src="/img/VOLUMENDELUZ1.2.jpg" alt="plano1"></p>
 <p><img src="/img/VOLUMENDELUZ1.3.jpg" alt="plano1"></p>
 <blockquote>
