--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -105,20 +105,123 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>DEMO SOFTWARE</h1>
-         <p>Software elegido: NEORT</p>
+         <h4 id="software-heavym">Software: HEAVYM</h4>
 <ul>
-<li><a href="https://neort.io/popular">NEORT</a> - Plataforma digital para crear arte digital a traves de coding.
-<img src="/img/NEORT.png" alt="plano1"></li>
+<li><a href="https://heavym.net/en/">HEAVYM</a> - Es un software de mapeo de proyección fácil, con efectos listos para usar. Está disponible tanto para mac como windows.</li>
 </ul>
+<p><a href="https://neort.io/product/latest">Ejemplo de uso 1</a> - Compartir y gestionar obras de arte en distintos formatos (video, GLSL y Javascript).</p>
+<p><a href="https://neort.io/product/latest">Ejemplo de uso 2</a> - Vender o comprar conocimiento y habilidades disponibles en la página.*</p>
+<h5 id="tutorial-de-uso-básico-de-heavym">TUTORIAL DE USO BÁSICO DE HEAVYM</h5>
 <blockquote>
-<p>*<a href="https://neort.io/product/latest">Ejemplo de uso 1</a> - Compartir y gestionar obras de arte en distintos formatos (video, GLSL y Javascript).</p>
+<ul>
+<li>Lo primero que debes hacer es elegir una superficie sobre la cual quieres proyectar. En este caso a modo de ejemplo hice una superficie de piramides de papel unidas y las pegue en una pared.</li>
+</ul>
 </blockquote>
+<p><img src="/img/HEAVYM.4.jpg" alt="plano1"></p>
 <blockquote>
-<p>*<a href="https://neort.io/product/latest">Ejemplo de uso 2</a> - Vender o comprar conocimiento y habilidades disponibles en la página.*</p>
+<ul>
+<li>Luego debes ubicar el proyector en un lugar donde la proyección cubra toda la superficie sobre la que quieres proyectar. Es importante que el proyector se mantenga en la misma posicion siempre.</li>
+</ul>
 </blockquote>
-<p>-Mostrar a través de imágenes el proceso desde que entras a la página a el inicio de seción.</p>
-<p>-Explicar para que sirve cada una de las opciones. Luego realizar un &ldquo;minitutorial&rdquo; de casa opción paso a paso a través de imagenes. Escribir el codigo utilizado en cada opción.</p>
-<p><img src="/img/NEORT.1.jpg" alt="plano1"></p>
+<p><img src="/img/HEAVYM.5.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Luego debes descargar el software en tu computador y conectarlo al proyector. La versión de prueba se puede bajar directamente desde la página <a href="https://heavym.net/en/">https://heavym.net/en/</a>.</li>
+<li>Una vez que lo hayas descargado, al abrirlo te aparecerá algo así.</li>
+</ul>
+</blockquote>
+<p><img src="/img/HEAVYM.2.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Debes apretar sobre crear un nuevo proyecto, y se abrira la ventana principal.</li>
+</ul>
+</blockquote>
+<p><img src="/img/HEAVYM.3.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Para conectar el software al proyector, debes hacer lo siguiente. La opción de Windowed es para abrir una ventana pequeña, a la cual le puedes dar tus propias medidas. La opción Fullscreen es para que la proyeccion sea de tamaño completo.</li>
+</ul>
+</blockquote>
+<p><img src="/img/HEAVYM.6.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Luego debemos mapear la superficie elegida en la pantalla del programa.</li>
+<li>En la parte superior de la ventana principal, se encuentran las herramientas para dibujar el mapeo de la superficie a proyectar. Primero encontramos figuras predeterminadas que si arrastramos hacia la pantalla podemos editar por medio de los vértices, y más a la izquierda hay herramientas como un pincel de dibujo, un imán para unir vértices, y una regla que nos ayuda a ubicarnos en la superficie.</li>
+</ul>
+</blockquote>
+<p><img src="/img/HEAVYM.7.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Ahora podemos comenzar a dibujar nuestra figura en el programa mirando y tomando como referente la proyección.</li>
+</ul>
+</blockquote>
+<p><img src="/img/HEAVYM.8.jpg" alt="plano1">
+
+
+<video width="600" height="400" controls>
+  <source src="/img/MAPPING.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+</p>
+<blockquote>
+<ul>
+<li>Luego que dibujamos toda la superficie en el software, podemos ver que todas las figuras han sido agregadas a un mismo grupo. Los grupos los podemos ver a la izquierda de la ventana principal. En esta parte podemos crear distintos grupos y dentro de estos agregar las figuras de nuestra superficie.</li>
+</ul>
+</blockquote>
+<p><img src="/img/HEAVYM.9.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Una vez que tengamos listos los distintos grupos, se verá algo así.</li>
+</ul>
+</blockquote>
+<p><img src="/img/HEAVYM.10.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>En la parte izquierda de la ventana principal, encontramos las herramientas para darle efectos a nuestras figuras. Las primeras tres opciones (rojas) son para editar los bordes, el centro y las transformaciones de distintos ángulos de las figuras en los grupos. Podemos cambiar los grosores de los bordes, los colores, las animaciones, y lo mismo con el centro de las figuras.</li>
+</ul>
+</blockquote>
+
+
+<video width="600" height="400" controls>
+  <source src="/img/MAPPING1.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+
+
+<video width="600" height="400" controls>
+  <source src="/img/MAPPING2.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+
+
+<video width="600" height="400" controls>
+  <source src="/img/MAPPING3.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+<blockquote>
+<ul>
+<li>De esta misma forma podemos seguir editando todos los grupos que creamos con distintos efectos cada uno.</li>
+<li>Una vez que tenemos todos los grupos con efectos, podemos crear una nueva escena en la parte de abajo. Tambien podemos ir prendiendo o apagando escenas si queremos. En la parte de abajo podemos editar la duración de cada escena, ya sea en beats o en segundos.</li>
+</ul>
+</blockquote>
+<p><img src="/img/HEAVYM.11.jpg" alt="plano1"></p>
+<blockquote>
+<ul>
+<li>Cuando tengamos las escenas listas le damos play, y en la parte de arriba del programa, donde dice Projection, seleccionamos FULL SCREEN y podemos dejar nuestra proyección funcionando todo el tiempo que queramos.</li>
+<li>Mi proyección quedo algo así:</li>
+</ul>
+</blockquote>
+
+
+<video width="600" height="400" controls>
+  <source src="/img/MAPPING4.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+<p>*(aún estoy explorando el programa, a medida que vaya aprendiendo cosas las iré subiendo)</p>
 
          
       </div>
